<resources>
    <string name="app_name">Exercise04</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Shopping products</string>
    <string name="nav_header_subtitle">Bartosz Rodowicz</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="author">Bartosz Rodowicz</string>
    <string name="welcome">Welcome to the Exercise 04!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_swipe_views">Swipe Views</string>
    <string name="tab1">Message</string>
    <string name="tab2">Username</string>
    <string name="welcomeHint">Enter invitation</string>
    <string name="authorHint">Enter author data</string>
    <string name="tab2Text">Tab 2</string>
    <string name="tab1Text">Tab 1</string>
    <string name="menu_recycler_view">Recycler View</string>
    <string name="returnButton">Return</string>
    <string name="action_add_product">Add product</string>
    <string name="nameHint">Name</string>
    <string name="add">Save</string>
    <string name="cancel">Cancel</string>
    <string name="floating_action_button">Add product</string>
    <string name="deleteButton">Delete</string>
    <string name="menu_swipe_images">Swipe Images</string>
    <string name="viewPager">View Pager</string>
    <string name="tv_fragment1">This is Fragment 11</string>
    <string name="edit_description">Edit description</string>
    <string name="choose_product_type">Choose product type</string>
    <string name="food">Food</string>
    <string name="drink">Drink</string>
    <string name="cleaning">Cleaning</string>
    <string name="rate_product">Rate the product</string>
    <string name="priceHint">Enter price</string>
    <string name="price">Price:</string>
    <string name="menu_recycler_view_db">Recycler View DB</string>
    <string name="menu_add_product_db">Add product DB</string>
    <string name="menu_product_details">Product Details DB</string>
    <string name="description_tv">Description:</string>
    <string name="modifyButton">Modify</string>
    <string name="menu_recycler_view_db2">Recycler View DB 2</string>
</resources>