<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editNameDB"
        android:layout_width="266dp"
        android:layout_height="57dp"
        android:ems="10"
        android:hint="@string/nameHint"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.052" />

    <EditText
        android:id="@+id/editTextTextMultiLineDB"
        android:layout_width="338dp"
        android:layout_height="85dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/edit_description"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNameDB"
        app:layout_constraintVertical_bias="0.09" />

    <EditText
        android:id="@+id/editPriceDB"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/priceHint"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLineDB"
        app:layout_constraintHorizontal_bias="0.5" />

    <TextView
        android:id="@+id/textView3DB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_product_type"
        android:textSize="24sp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPriceDB" />

    <RadioGroup
        android:id="@+id/radioGroupDB"
        android:layout_width="162dp"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3DB">

        <RadioButton
            android:id="@+id/foodRadioButtonDB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/food" />

        <RadioButton
            android:id="@+id/drinkRadioButtonDB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/drink" />

        <RadioButton
            android:id="@+id/cleaningRadioButtonDB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cleaning" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView4DB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rate_product"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/radioGroupDB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/ratingBar3DB"
        app:layout_constraintVertical_bias="0.026" />

    <RatingBar
        android:id="@+id/ratingBar3DB"
        android:layout_width="232dp"
        android:layout_height="52dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupDB"
        app:layout_constraintVertical_bias="0.174" />

    <Button
        android:id="@+id/saveButtonDB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.773"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar3DB"
        app:layout_constraintVertical_bias="0.196" />

    <Button
        android:id="@+id/cancelButtonDB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.227"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar3DB"
        app:layout_constraintVertical_bias="0.196" />

</androidx.constraintlayout.widget.ConstraintLayout>